
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int uint8_t ;
typedef size_t uint16_t ;
struct usb_host_endpoint {int * bsd_xfer; int bsd_urb_list; } ;
struct TYPE_3__ {int * tqe_prev; } ;
struct urb {size_t number_of_packets; int kill_count; int (* complete ) (struct urb*) ;TYPE_2__* iso_frame_desc; scalar_t__ actual_length; int status; TYPE_1__ bsd_urb_list; struct usb_host_endpoint* endpoint; } ;
struct TYPE_4__ {scalar_t__ actual_length; } ;


 int ECONNRESET ;
 int EINVAL ;
 int Giant ;
 int TAILQ_REMOVE (int *,struct urb*,int ) ;
 int bsd_urb_list ;
 int mtx_lock (int *) ;
 scalar_t__ mtx_owned (int *) ;
 int mtx_unlock (int *) ;
 int stub1 (struct urb*) ;
 int usb_unlink_bsd (int ,struct urb*,int) ;

__attribute__((used)) static int
usb_unlink_urb_sub(struct urb *urb, uint8_t drain)
{
 struct usb_host_endpoint *uhe;
 uint16_t x;
 uint8_t do_unlock;
 int err;

 if (urb == ((void*)0))
  return (-EINVAL);

 do_unlock = mtx_owned(&Giant) ? 0 : 1;
 if (do_unlock)
  mtx_lock(&Giant);
 if (drain)
  urb->kill_count++;

 if (urb->endpoint == ((void*)0)) {
  err = -EINVAL;
  goto done;
 }
 uhe = urb->endpoint;

 if (urb->bsd_urb_list.tqe_prev) {


  TAILQ_REMOVE(&uhe->bsd_urb_list, urb, bsd_urb_list);
  urb->bsd_urb_list.tqe_prev = ((void*)0);
  urb->status = -ECONNRESET;
  urb->actual_length = 0;

  for (x = 0; x < urb->number_of_packets; x++) {
   urb->iso_frame_desc[x].actual_length = 0;
  }

  if (urb->complete) {
   (urb->complete) (urb);
  }
 } else {







  usb_unlink_bsd(uhe->bsd_xfer[0], urb, drain);
  usb_unlink_bsd(uhe->bsd_xfer[1], urb, drain);
 }
 err = 0;
done:
 if (drain)
  urb->kill_count--;
 if (do_unlock)
  mtx_unlock(&Giant);
 return (err);
}
